Fix desktop search icon alignment using flexbox centering

--- a/weather.css
+++ b/weather.css
@@ -18,51 +18,47 @@ body{
 *{
     margin:0;padding:0;box-sizing: border-box;
 }
-a{
-    text-decoration: none;
-    color:white;
-}
 h1{
     text-align: center;
-    font-size: 7rem;
+    font-size: 5rem;
     color: aliceblue;
     padding-top: 20px;
 }
-.but{
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
-    align-items: center;
-}
-button{
-    background-color:rgb(0, 255, 213);
+button {
+    background-color: rgb(0, 255, 213);
     color: beige;
-    width:auto;
-    height:9vh;
-    padding:20px;
-    font-size:3rem;
-    border-radius:30px;
+    width: auto;
+    height: 8vh;
+    font-size: 3rem;
+    border-radius: 30px;
+    border-top-left-radius: 0%;
+    border-bottom-left-radius: 0%;
+    padding: 0 25px;      
+    border: none;        
+    display: inline-flex;
+    justify-content: center; 
+    align-items: center;     
 }
 .svg{
-height:25vh;  
+height:20vh;  
 width:100%;
 display:flex;
 justify-content: center;
 align-items: center;
 }
 svg{
-    height:25vh;
+    height:20vh;
     width:auto;
 }
 #search-box{
-    height: 30vh;
+    height: 20vh;
     display: flex;justify-content: center;align-items: center;
 }
 #search-box input{
     border-radius: 25px;
     padding:20px;
     font-size: 3rem;
-    height:10vh;
+    height:8vh;
     width:80%;
     border-top-right-radius: 0%;
     border-bottom-right-radius: 0%;
@@ -72,15 +68,10 @@ svg{
     text-align: center;
 }
 .temp{
-    font-size: 7rem;
+    font-size: 6rem;
 }
 .nature,.city{
     font-size: 2rem;
-}
-button{
-    height:10vh ;
-    border-top-left-radius: 0%;
-    border-bottom-left-radius: 0%;
 }
 @media (max-width:768px)
 {
@@ -120,6 +111,5 @@ svg{
     height:150px;
     width:auto;
     padding-left: 0px;
-
 } 
 }
